<resources>
    <string name="permissionsDeniedTitle">We need some permissions to continue</string>
    <string name="permissionsDeniedMessage">Videona needs some permissions to use the camera or
        record audio.\nWithout them Videona can\'t continue and will be closed.</string>
    <string name="permissions_denied_snackbar_message">We need those permissions to take awesome videos with Videona!</string>
    <string name="permissions_denied_go_to_settings_button">Go to settings</string>
    <string name="CloseBecauseOfPermissionsTitle">Permissions not granted</string>
    <string name="app_out_of_date_message">Time for testing app expired</string>
    <string name="chronometerDefault">00:00</string>
    <string name="toast_exit">Press back to exit</string>
    <string name="please_wait">Please wait</string>
    <string name="dialog_processing">Making magic in your video</string>
    <string name="recordError">Something bad happened. Impossible to record video, try again</string>
    <string name="giftOverlayDialogTitle">Your present</string>
    <string name="giftOverlayDialogMessage">Enjoy your new Bollywood filter</string>
    <string name="recordTextGallery">Gallery</string>
    <string name="recordTextEdit">Edit</string>
    <string name="dialog_title_record_adapting_video">Adapting video</string>
    <string name="dialog_message_record_adapting_video">Working …</string>
    <string name="alert_dialog_info_detail">Info detail</string>
    <string name="activity_camera_settings_no_list">Camera settings empty</string>
    <string name="shareError">Ups, we couldn\'t share this video. Sorry</string>
    <string name="share_using">"Share video using "</string>
    <string name="sharedWithVideona">"#vimojotime"</string>
    <string name="videonaTags">"#ViMoJoTime"</string>
    <string name="connectionFTPServerError">Error connecting FTP server. Please, check the host or internet connection</string>
    <string name="loginError">Invalid credentials for FTP server.</string>
    <string name="fileError">Error sending file to FTP server.File not found</string>
    <string name="credentialFTPNull">FTP connection data not set. Please configure FTP in settings.</string>
    <string name="upload_to_server">Send to platform</string>
    <string name="upload_bundle_summary_title">Platform uploads</string>
    <string name="uploading_video">Uploading video</string>
    <string name="error_uploading_video">Error uploading video</string>
    <string name="cancel_uploading_video">Canceled uploading video</string>
    <string name="pause_uploading_video">Paused uploading video</string>
    <string name="upload_video_completed">Uploaded to platform</string>
    <string name="detail_project_hint_title">Enter your name here</string>
    <string name="detail_project_info_duration">Duration</string>
    <string name="detail_project_info_size">Size</string>
    <string name="detail_project_info_quality">Quality</string>
    <string name="detail_project_info_format">Format</string>
    <string name="detail_project_info_bitrate">Bitrate</string>
    <string name="detail_project_info_framerate">Frame rate</string>
    <string name="title_advanced_section">Advanced</string>
    <string name="downloadKamarada">Download Kamarada</string>
    <string name="shareVideona">Share Videona</string>
    <string name="followUsInTwitter">Follow us in Twitter</string>
    <string name="videonaTwitter">https://twitter.com/videona_eng</string>
    <string name="enterEmail">Enter a valid email</string>
    <string name="titleUserSection">My account</string>
    <string name="title_FTP1_Section">FTP</string>
    <string name="title_FTP2_Section">Breaking news </string>
    <string name="host_FTP">Host</string>
    <string name="enterHost">Enter your address of FTP server host</string>
    <string name="username_FTP">FTP Username</string>
    <string name="enterUsername_FTP">Enter your username</string>
    <string name="password_FTP">Password</string>
    <string name="enterPassword_FTP">Enter your password</string>
    <string name="edited_video_destination">Edited Video destination</string>
    <string name="enterEditedVideoDestination_FTP">Enter your destination folder</string>
    <string name="unedited_video_destination">Unedited Video destination </string>
    <string name="enterUneditedVideoDestination_FTP">Enter your destination folder</string>
    <string name="title_camera_section">Camera</string>
    <string name="low_resolution_name">720p</string>
    <string name="good_quality_name">25 Mbps</string>
    <string name="good_frame_rate_name">25 fps</string>
    <string name="aboutUsTitle">About us</string>
    <string name="moreInformation">More information</string>
    <string name="privacyPolicy">Privacy policy</string>
    <string name="termsOfService">Terms of service</string>
    <string name="licenses">Licenses</string>
    <string name="legacyAdviceTitle">Legal Notice</string>
    <string name="accountActions">Account actions</string>
    <string name="exit">Exit</string>
    <string name="menuSuggestions">Suggestions</string>
    <string name="menuGallery">Gallery</string>
    <string name="menuSettings">Settings</string>
    <string name="licenseTitle"><u>Free Software Licenses</u></string>
    <string name="licenseContent">
        Copyright &#169; 2013 Jake Wharton\nLicensed under the Apache License, Version 2.0 (the
        "License"); you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\thttp://www.apache.org/licenses/LICENSE-2.0\nUnless
        required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.\nCopyright &#169; 2013 Lucas Rocha\nTwoWayView\'s code is
        based on bits and pieces of Android\'s AbsListView, Listview, and
        StaggeredGridView.\nCopyright &#169; 2012 The Android Open Source Project\nLicensed under the
        Apache License, Version 2.0 (the "License"); you may not use this file except in compliance
        with the License. You may obtain a copy of the License
        at\n\thttp://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or
        agreed to in writing, software distributed under the License is distributed on an "AS IS"
        BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.\nCopyright &#169; mpa4parser\nLicensed under the Apache
        License, Version 2.0 (the "License"); you may not use this file except in compliance with
        the License. You may obtain a copy of the License at\n\thttp://www.apache.org/licenses/LICENSE-2.0\nUnless
        required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.\n
        Copyright 2012 Mixpanel, Inc.

Please see the project README file for additional information.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this work except in compliance with the License.
You may obtain a copy of the License below, or at:

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

                                 Apache License
                           Version 2.0, January 2004
                        http://www.apache.org/licenses/ \n
        Event Bus                 Apache License
                           Version 2.0, January 2004
                        http://www.apache.org/licenses/ \n

Licensed under the Apache License, Version 2.0 (the "License"); you may not use this work except in compliance with the License. You may obtain a copy of the License below, or at:

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.

                             Apache License
                       Version 2.0, January 2004
                    http://www.apache.org/licenses/ \n
        Dexmaker        Apache License
                           Version 2.0, January 2004
                        http://www.apache.org/licenses/ \n
        Google-services Apache License
Version 2.0, January 2004
http://www.apache.org/licenses/ \n
        Kickflip        Apache License
                           Version 2.0, January 2004
                        http://www.apache.org/licenses/ \n
        Glide BSD, part MIT and Apache 2.0. \n
        OkHttp      Apache License
                           Version 2.0, January 2004
                        http://www.apache.org/licenses/ \n
        GSon Copyright 2008 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. \n


    </string>
    <string name="licenseMusicTitle"><u>Music Attribution</u></string>
    <string name="licenseMusicContent">
        • Kevin MacLeod, Impact Prelude, http://freemusicarchive.org/music/Kevin_MacLeod/Impact/Impact_Prelude_1765,
        icono DJ, CC BY 3.0\n• Kevin MacLeod, Monkeys Spinning Monkeys,
        http://freemusicarchive.org/music/Kevin_MacLeod/Best_of_2014_1461/Monkeys_Spinning_Monkeys,
        icono clarinete, CC BY 3.0\n• Josh Woodward, Don\'t Close Your Eyes (Instrumental),
        http://freemusicarchive.org/music/Josh_Woodward/The_Simple_Life_Part_2_1667/JoshWoodward-TSL-NoVox-204-DontCloseYourEyes_1462,
        icono guitarra española, CC BY 4.0\n• Grapes, I Dunno, http://ccmixter.org/files/grapes/16626,
        icono gorra, CC BY 3.0\n• Josh Woodward, Troublemaker, http://www.joshwoodward.com/song/troublemaker,
        icono micrófono, CC BY 4.0\n• Scott Altham, Break Dance, http://ccmixter.org/files/scottaltham/47985,
        icono congas, CC BY 3.0\n• Kevin MacLeod, Call To Adventure,
        https://freemusicarchive.org/music/Kevin_MacLeod/2013/Call_to_Adventure_1089, icono violín,
        CC BY 3.0\n• Josh Woodward, Airplane Mod Instrumental,
        http://freemusicarchive.org/music/Josh_Woodward/The_Beautiful_Machine/JoshWoodward-AirplaneMode-NoVox,
        icono guitarra eléctrica, CC BY 4.0\n• Josh Woodward, The Last Slice Of Pecan Pie (INSTRUMENTAL VERSION),
        http://freemusicarchive.org/music/Josh_Woodward/The_Beautiful_Machine/JoshWoodward-TheLastSliceOfPecanPie-NoVox,
        icono clave de sol, CC BY 4.0\n
    </string>
    <string name="minVolume">0%</string>
    <string name="maxVolume">100%</string>
    <string name="title_track_clip_music">Music track volume</string>
    <string name="mute">Mute</string>
    <string name="solo">Solo</string>
</resources>