<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/title_advanced_section">
        <Preference
            android:key="downloadKamarada"
            android:title="@string/downloadKamarada">
        </Preference>
        <Preference
            android:key="shareVideona"
            android:title="@string/shareVideona">
        </Preference>
        <Preference
            android:key="followUs"
            android:title="@string/followUsInTwitter">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/videonaTwitter"/>
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/titleUserSection">
        <EditTextPreference
            android:key="name"
            android:title="@string/name"
            android:dialogTitle="@string/enterName">
        </EditTextPreference>

        <EditTextPreference
            android:key="username"
            android:title="@string/username"
            android:dialogTitle="@string/enterUsername">
        </EditTextPreference>

        <EditTextPreference
            android:key="email"
            android:title="@string/emailPreference"
            android:inputType="textEmailAddress"
            android:dialogTitle="@string/enterEmail">
        </EditTextPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_FTP1_Section">

        <EditTextPreference
            android:key="host"
            android:title="@string/host_FTP"
            android:dialogTitle="@string/enterHost">
        </EditTextPreference>

        <EditTextPreference
            android:key="usernameFTP"
            android:title="@string/username_FTP"
            android:dialogTitle="@string/enterUsername_FTP">
        </EditTextPreference>

        <EditTextPreference
            android:key="passwordFTP"
            android:title="@string/password_FTP"
            android:selectAllOnFocus="true"
            android:inputType="textWebPassword"
            android:singleLine="true"
            android:dialogTitle="@string/enterPassword_FTP">
        </EditTextPreference>

        <EditTextPreference
            android:key="EditedVideoDestinationFTP"
            android:title="@string/edited_video_destination"
            android:dialogTitle="@string/enterEditedVideoDestination_FTP"
            >
        </EditTextPreference>

        <EditTextPreference
            android:key="UneditedVideoDestinationFTP"
            android:title="@string/unedited_video_destination"
            android:dialogTitle="@string/enterUneditedVideoDestination_FTP">
        </EditTextPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_FTP2_Section">

        <EditTextPreference
            android:key="host_FTP2"
            android:title="@string/host_FTP"
            android:dialogTitle="@string/enterHost">
        </EditTextPreference>

        <EditTextPreference
            android:key="username_FTP2"
            android:title="@string/username_FTP"
            android:dialogTitle="@string/enterUsername_FTP">
        </EditTextPreference>

        <EditTextPreference
            android:key="password_FTP2"
            android:title="@string/password_FTP"
            android:inputType="textWebPassword"
            android:selectAllOnFocus="true"
            android:dialogTitle="@string/enterPassword_FTP">
        </EditTextPreference>

        <EditTextPreference
            android:key="Edited_Video_Destination_FTP2"
            android:title="@string/edited_video_destination"
            android:dialogTitle="@string/enterEditedVideoDestination_FTP">
        </EditTextPreference>

        <EditTextPreference
            android:key="Unedited_Video_Destination_FTP2"
            android:title="@string/unedited_video_destination"
            android:dialogTitle="@string/enterUneditedVideoDestination_FTP">
        </EditTextPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_camera_section"
        android:key="@string/title_camera_section"
        android:enabled="true"
        >

        <com.videonasocialmedia.vimojo.presentation.views.customviews.ChooseCameraResolutionListPreferences
            android:theme="@style/VideonaAlertDialog"
            android:dialogTitle="@string/resolution"
            android:entries="@array/camera_resolution_names"
            android:entryValues="@array/camera_resolution_values"
            android:key="list_preferences_resolution"
            android:summary="@string/low_resolution_name"
            android:title="@string/resolution"
            />

        <com.videonasocialmedia.vimojo.presentation.views.customviews.ChooseCameraQualityListPreferences
            android:theme="@style/VideonaAlertDialog"
            android:dialogTitle="@string/quality"
            android:entries="@array/camera_quality_names"
            android:entryValues="@array/camera_quality_values"
            android:key="list_preferences_quality"
            android:summary="@string/good_quality_name"
            android:title="@string/quality"/>

        <com.videonasocialmedia.vimojo.presentation.views.customviews.ChooseFrameRateRateListPreferences
            android:theme="@style/VideonaAlertDialog"
            android:dialogTitle="@string/frame_rate"
            android:entries="@array/camera_frame_rate_names"
            android:entryValues="@array/camera_frame_rate_values"
            android:key="list_preferences_frame_rate"
            android:summary="@string/good_frame_rate_name"
            android:title="@string/frame_rate"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/moreInformation">
        <Preference
            android:title="@string/aboutUsTitle">
            <intent android:action=".presentation.views.activity.AboutActivity"/>
        </Preference>
        <Preference
            android:title="@string/privacyPolicy">
            <intent android:action=".presentation.views.activity.PrivacyPolicyActivity"/>
        </Preference>
        <Preference
            android:title="@string/termsOfService">
            <intent android:action=".presentation.views.activity.TermsOfServiceActivity"/>
        </Preference>
        <Preference
            android:title="@string/licenses">
            <intent android:action=".presentation.views.activity.LicensesActivity"/>
        </Preference>
        <Preference
            android:title="@string/legacyAdviceTitle">
            <intent android:action=".presentation.views.activity.LegalNoticeActivity"/>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/accountActions">
        <Preference
            android:key="exit"
            android:title="@string/exit">
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>