<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".presentation.views.activity.EditorActivity"
    >


    <item
        android:id="@+id/action_more"
        android:icon="@drawable/edit_activity_ic_options"
        android:orderInCategory="100"
        android:title="More"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_settings_edit_gallery"
                android:icon="@drawable/menu_gallery"
                android:title="@string/menuGallery"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/action_settings_suggestions"
                android:icon="@drawable/editor_activity_drawer_ic_mail"
                android:title="@string/menuSuggestions"
                app:showAsAction="never"/>

            <item
                android:id="@+id/action_settings_edit_options"
                android:icon="@drawable/menu_settings"
                android:title="@string/menuSettings"
                app:showAsAction="never"/>
        </menu>

    </item>

</menu>