<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/linear_layout_seekBar_volume_sound"
              android:layout_below="@+id/music_image"
              android:orientation="vertical"
              android:layout_marginTop="16dp"
              android:layout_marginRight="8dp"
              android:layout_marginLeft="8dp">

        <TextView
            android:id="@+id/volume_view_title"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:paddingStart="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textColor="?android:attr/textColorPrimary"
            tools:text="@string/title_track_clip_music"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_gravity="start"
                    android:scaleType="fitXY"
                    android:gravity="center"
                    android:text="@string/minVolume"
                    />
                <SeekBar
                    android:id="@+id/seekBar_volume_sound"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="16dp"
                    android:layout_weight="1"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="0dp"
                    android:indeterminate="false"
                    android:progress="50"
                    android:max="100"
                    android:layout_gravity="center_horizontal"
                    android:progressTint="?attr/colorAccent"
                    android:progressBackgroundTint="?android:attr/textColorPrimary"
                    android:thumb="@drawable/ic_circular_thumb_seekbar"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="48dp"
                    android:layout_gravity="end"
                    android:scaleType="fitXY"
                    android:text="@string/maxVolume"
                    android:gravity="center"
                    />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:weightSum="1">
                <Switch
                    android:id="@+id/switchMute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:paddingLeft="16dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:text="@string/mute" />

                <ImageButton
                    android:id="@+id/delete_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingRight="16dp"
                    android:background="#00000000"
                    android:src="@drawable/activity_edit_clip_delete_normal"
                    android:tint="@color/button_theme_light"
                    android:visibility="visible"/>

                <Switch
                    android:id="@+id/switchSolo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32dp"
                    android:textColor="@color/button_theme_light"
                    android:text="@string/solo"
                    android:visibility="invisible"
                    />


        </RelativeLayout>


</LinearLayout>