<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"/>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar">

            <android.support.percent.PercentFrameLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/detail_project_percent_thumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                >
                <ImageView
                    android:id="@+id/detail_project_thumb"
                    android:layout_width="250dp"
                    app:layout_widthPercent="100%"
                    app:layout_aspectRatio="178%"
                    android:src="@drawable/activity_gallery_project_no_preview"
                    android:padding="24dp"
                    />

            </android.support.percent.PercentFrameLayout>

            <TextView
                android:id="@+id/detail_project_title"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/detail_project_percent_thumb"
                android:layout_margin="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="48dp"
                android:paddingLeft="16dp"
                android:textCursorDrawable="@null"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:hint="@string/detail_project_hint_title"
                android:drawableLeft="@drawable/activity_detail_project_edit_title"
                android:drawablePadding="4dp"
                />

            <android.support.v7.widget.CardView
                android:id="@+id/detail_project_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:layout_below="@id/detail_project_title"
                style="?attr/cardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/detail_project_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/button_margin"
                        android:text="@string/detail_project_info_duration"/>

                    <TextView
                        android:id="@+id/detail_project_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/button_margin"
                        android:text="@string/detail_project_info_size"/>

                    <TextView
                        android:id="@+id/detail_project_quality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/button_margin"
                        android:text="@string/detail_project_info_quality"/>

                    <TextView
                        android:id="@+id/detail_project_format"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/button_margin"
                        android:text="@string/detail_project_info_format"/>

                    <TextView
                        android:id="@+id/detail_project_bitrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/button_margin"
                        android:text="@string/detail_project_info_bitrate"/>

                    <TextView
                        android:id="@+id/detail_project_framerate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/button_margin"
                        android:text="@string/detail_project_info_framerate"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <ImageButton
                android:id="@+id/button_detail_project_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="12dp"
                android:src="@drawable/activity_edit_common_icon_cancel"/>

            <ImageButton
                android:id="@+id/button_detail_project_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="12dp"
                android:src="@drawable/activity_edit_common_icon_accept"/>

        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>